fix(header): fix dropdown menu overflow

--- a/packages/components/header/src/less/header-tabs.less
+++ b/packages/components/header/src/less/header-tabs.less
@@ -97,7 +97,6 @@
   &__container {
     list-style: none;
     margin: @oui-header-tabs-margin;
-    overflow: hidden;
     padding: 0;
     border-bottom: @oui-header-tabs-border-bottom;
 
